# cadence

./: .bazelrc  MODULE.bazel  makefile  shell.nix
dox/: .index.norg
run/: Physics HW.02002.norg  Physics HW.2002.norg  STUFF.56682.norg  TESTET sth.77475.norg  a.101.norg  a.11841.norg  a.151.norg  a.16347.norg  a.17114.norg  a.21022.norg  a.28795.norg  a.31457.norg  a.31834.norg  a.33351.norg  a.36467.norg  a.42754.norg  a.46887.norg  a.47822.norg  a.51581.norg  a.52380.norg  a.52613.norg  a.53029.norg  a.56065.norg  a.56813.norg  a.58948.norg  a.59925.norg  a.67591.norg  a.67674.norg  a.7835.norg  a.81377.norg  a.82366.norg  a.87123.norg  a.90377.norg  a.91969.norg  a.95460.norg  aano.48258.norg  asd.84230.norg  brush.75822.norg  create.65546.norg  cut at lsun's.55533.norg  (+41 more)
run/oneshot/: Physics HW.2002.norg
src/: BUILD.bazel  Block.cpp  Block.h  Config.cpp  Config.h  Database.cpp  Database.h  Day.cpp  Day.h  Main.cpp  Ui.cpp  Ui.h  Week.cpp  Week.h  main.cpp
